# src/routes/order.ts
@@ -11,6 +11,7 @@ orderRoute.post("/order/:id", auth, order.createOrder);
 orderRoute.get("/order/:id", auth, order.getOrder);
 orderRoute.get("/orders", auth, order.getOrders);
 orderRoute.patch("/order/:id", auth, order.cancelOrder);
+orderRoute.patch("/order/cancel/:order_id", auth, order.cancelOrderById);
 orderRoute.get("/admin/orders", adminAuth, order.getOrders);
 orderRoute.get("/admin/order/:id", adminAuth, order.getOrder);
 
